added script font to H1

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
   font-family: "Merriweather", serif;
 }
 hr {
+  font-family: 'Kaushan Script', cursive;
   border-style: none;
   background-color: transparent;
   border-color: #7a5c3c;
